--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -16,7 +16,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: rgb(3,174,239);
     top: 0;
     left: 0;
     z-index: 99999;
