--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -946,6 +946,8 @@ img {
     font-size: 13px;
     float: left;
     letter-spacing: 1px;
+    height: 19px;
+    outline:medium;
 }
 
 .widget .search-form button {
@@ -958,6 +960,7 @@ img {
     line-height: 20px;
     color: #787878;
     cursor: pointer;
+    outline:medium;
 }
 
 .tagcloud a {
@@ -1332,6 +1335,18 @@ img {
 @media (min-width: 1200px){
     body .container {
         max-width: 970px;
+    }
+}
+
+@media (min-width: 991px){
+    body .container {
+        max-width: 750px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 710px
     }
 }
 
